--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,39 @@
 {
-  "compilerOptions": {
-    "target": "ES6",
-    "lib": [
-      "es2017",
-      "es2017.object",
-      "es2017.sharedmemory",
-      "es2016",
-      "es2016.array.include",
-      "es2015",
-      "es2015.core",
-      "es2015.promise",
-      "es2015.collection",
-      "es5",
-      "dom"
-    ],
-    "module": "commonjs",
-    "declaration": true,
-    "noImplicitAny": false,
-    "removeComments": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "noEmitHelpers": false,
-    "sourceMap": false,
-    "strictNullChecks": false,
-    "jsx": "react",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
-  },
+    "compilerOptions": {
+        "target": "ES6",
+        "lib": [
+            "es2017",
+            "es2017.object",
+            "es2017.sharedmemory",
+            "es2016",
+            "es2016.array.include",
+            "es2015",
+            "es2015.core",
+            "es2015.promise",
+            "es2015.collection",
+            "es5",
+            "dom"
+        ],
+        "module": "commonjs",
+        "declaration": true,
+        "noImplicitAny": false,
+        "removeComments": false,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "noEmitHelpers": false,
+        "sourceMap": false,
+        "strictNullChecks": false,
+        "jsx": "react",
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true
+    },
 
-  "include": [
-    "definitions.d.ts",
-    "src/**/*",
-    "node_modules/@webgpu/types/**/*"
-  ],
-  "compileOnSave": false,
-  "buildOnSave": false
+    "include": [
+        "definitions.d.ts",
+        "src/**/*",
+        "node_modules/@webgpu/types/**/*",
+        "example/helloworld.ts"
+    ],
+    "compileOnSave": false,
+    "buildOnSave": false
 }
